# video-to-notes

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
codex-skill/: SKILL.md
codex-skill/agents/: openai.yaml
codex-skill/references/: model-selection.md
codex-skill/scripts/: process_video.py  serve_dashboard.py
tests/: test_notion.py  test_obsidian.py  test_reporting.py  test_setup.py
ytlt/: captions.py  cli.py  config.py  notion.py  obsidian.py  reporting.py  transcribe.py
